[package]
name = "patisserie"
version = "0.1.0"
authors = ["Beth Rennie <beth@brennie.ca>"]
edition = "2024"
description = "A CLI client for pastery.net"
license = "GPL-3.0"

[dependencies]
anyhow = "1.0.97"
camino = "1.1.9"
clap = { version = "4.5.31", features = ["derive"] }
phf = { version = "0.11.3", features = ["macros"] }
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.218", features = ["derive"] }
